# myclib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README_CN.md  run_tests.sh
include/myclib/: aligned_malloc.h  array.h  attribute.h  hash.h  iter.h  list.h  log.h  macros.h  map.h  string.h  test.h  time.h  type.h  utils.h
include/myclib/container/: array.h  map.h
include/myclib/element/: core.h  template.h
src/: aligned_malloc.c  array.c  hash.c  list.c  log.c  map.c  string.c  test.c  time.c  type.c
src/container/: array.c  map.c
src/element/: int.c  str.c
tests/: array_test.c  list_test.c  map_test.c  string_test.c
